--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         
         <main>
             <div class="article">
-            <!-- Titolo Articolo / Immagini -->
+            <!-- Titolo Articolo -->
                 <section>
-                    
+                    <h1>Internet deve essere al servizio del "bene pubblico": ilk manifesto di Tim Berners-Lee</h1>
+                    <p>Scritto da <a href="#">The Booleaner</a></p>
+                    <p>il 10/10/2020</p>
                 </section>
+                <!-- Immagini -->
+                <section></section>
             </div>
         </main>
 
