--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
             <!-- Titolo Articolo -->
                 <section>
                     <h1>Internet deve essere al servizio del "bene pubblico": ilk manifesto di Tim Berners-Lee</h1>
-                    <p>Scritto da <a href="#">The Booleaner</a></p>
-                    <p>il 10/10/2020</p>
+                    <p class="undertitle">Scritto da <a href="#">The Booleaner</a></p>
+                    <p class="undertitle date-time">il 10/10/2020</p>
                 </section>
                 <!-- Immagini -->
-                <section></section>
+                <section>
+                    <img src="img/tim-1.jpg" alt="Tim 1 Talking">
+                    <img src="img/tim-2.jpg" alt="Tim 2 Standing">
+                    <p class="photo-description">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                    <p class="photo-description">2nd Photo: Wikimedia, by Paul Clarke</p>
+            
+                </section>
+                <!-- Inizio Paragrafo articolo -->
+                <section>
+
+                </section>
             </div>
         </main>
 
