+ List / Table / Ending P

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="article">
             <!-- Titolo Articolo -->
                 <section>
-                    <h1>Internet deve essere al servizio del "bene pubblico": ilk manifesto di Tim Berners-Lee</h1>
+                    <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
                     <p class="undertitle">Scritto da <a href="#">The Booleaner</a></p>
                     <p class="undertitle date-time">il 10/10/2020</p>
                 </section>
@@ -35,7 +35,23 @@
                 </section>
                 <!-- Inizio Paragrafo articolo -->
                 <section>
+                    <p class="main-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus commodi quo, consectetur facilis ut molestiae cum maiores, dolorum ipsa, explicabo <span>exercitationem. Eligendi in exercitationem magni quasi dicta vel</span> illo officiis.
+                    Quae eum debitis quo suscipit aperiam dolore repellat? Architecto sint modi natus ipsa repellat culpa fugiat sit aspernatur officiis minus, eaque quos non vero asperiores ut explicabo pariatur porro fuga?
+                    Vero eveniet assumenda repellat facere rem, architecto, qui dicta laudantium amet saepe iste nobis laboriosam dolor ut corrupti debitis molestias est, earum expedita similique consequatur? Quis beatae hic non incidunt?
+                    Dicta doloribus facilis quasi deserunt expedita, perferendis molestias aut. Eveniet sunt dolorem, qui et, repellat molestiae beatae quas eligendi sed magni dolore. Quibusdam doloremque, vel repellat blanditiis animi enim alias?</p>
+                        
+                    <!-- Tabella non Ordinata sotto al Paragrafo -->
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, sunt minima. Expedita quidem ipsam reprehenderit asperiores qui totam ipsa architecto, quia voluptate quae at.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur. Totam, sunt minima. Expedita quidem ipsam reprehenderit asperiores qui totam ipsa architecto, quia voluptate quae at.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, sunt minima. Expedita quidem ipsam reprehenderit asperiores qui totam ipsa architecto, quia voluptate quae at.</li>
+                    </ul>
 
+                    <table>
+
+                    </table>
+
+                    <p class="main-paragraph"></p>
                 </section>
             </div>
         </main>
