Table and 2nd Paragraph

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     <p class="main-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus commodi quo, consectetur facilis ut molestiae cum maiores, dolorum ipsa, explicabo <span>exercitationem. Eligendi in exercitationem magni quasi dicta vel</span> illo officiis.
                     Quae eum debitis quo suscipit aperiam dolore repellat? Architecto sint modi natus ipsa repellat culpa fugiat sit aspernatur officiis minus, eaque quos non vero asperiores ut explicabo pariatur porro fuga?
                     Vero eveniet assumenda repellat facere rem, architecto, qui dicta laudantium amet saepe iste nobis laboriosam dolor ut corrupti debitis molestias est, earum expedita similique consequatur? Quis beatae hic non incidunt?
-                    Dicta doloribus facilis quasi deserunt expedita, perferendis molestias aut. Eveniet sunt dolorem, qui et, repellat molestiae beatae quas eligendi sed magni dolore. Quibusdam doloremque, vel repellat blanditiis animi enim alias?</p>
+                    Dicta doloribus facilis quasi deserunt expedita, perferendis molestias aut. Eveniet sunt dolorem, qui et, repellat molestiae beatae quas eligendi sed magni dolore. Quibusdam doloremque, vel repellat blanditiis animi enim alias?
+                    </p>
                         
                     <!-- Tabella non Ordinata sotto al Paragrafo -->
                     <ul>
@@ -48,10 +49,35 @@
                     </ul>
 
                     <table>
-
+                        <thead>
+                            <tr>
+                                <th>Lorem, ipsum dolor.</th>
+                                <th>Lorem, ipsum dolor.</th>
+                                <th>Lorem, ipsum dolor.</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="light-blue">
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui nemo nam vel fugit, quis omnis vero beatae suscipit tenetur dicta sit incidunt necessitatibus iste quasi expedita labore repellendus consequatur! Ea!.</td>
+                            </tr>
+                            <tr>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui nemo nam vel fugit, quis omnis vero beatae suscipit tenetur dicta sit incidunt necessitatibus iste quasi expedita labore repellendus consequatur! Ea!.</td>
+                            </tr> 
+                            <tr class="light-blue">
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui nemo nam vel fugit, quis omnis vero beatae suscipit tenetur dicta sit incidunt necessitatibus iste quasi expedita labore repellendus consequatur! Ea!.</td>
+                            </tr>
+                        </tbody>
                     </table>
 
-                    <p class="main-paragraph"></p>
+                    <p class="main-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus commodi quo, consectetur facilis ut molestiae cum maiores, dolorum ipsa, explicabo <span>exercitationem. Eligendi in exercitationem magni quasi dicta vel</span> illo officiis.
+                        Quae eum debitis quo suscipit aperiam dolore repellat? Architecto sint modi natus ipsa repellat culpa fugiat sit aspernatur officiis minus, eaque quos non vero asperiores ut explicabo pariatur porro fuga Lorem ipsum dolor sit amet consectetur adipisicing Lorem ipsum dolor sit amet consectetur adipisicing?
+                    </p>    
                 </section>
             </div>
         </main>
