--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
                     </p>    
                 </section>
             </div>
+
+            <div class="related-articles">
+                <p><strong>Potrebbero interessarti</strong></p>
+                <div class="image-with-title img1"> 
+                    <span><strong>Lorem, ipsum dolor</strong></span> 
+                </div>
+                <div class="image-with-title img2"> 
+                    <span><strong>Lorem, ipsum dolor</strong></span> 
+                </div>
+            </div>
         </main>
 
     </body>
